fix: z-index of combobox options (#15607)

--- a/airbyte-webapp/src/components/ui/ComboBox/ComboBox.module.scss
+++ b/airbyte-webapp/src/components/ui/ComboBox/ComboBox.module.scss
@@ -1,5 +1,6 @@
 @use "scss/variables";
 @use "scss/colors";
+@use "scss/z-indices";
 
 .optionsMenu {
   width: var(--input-width); // match the combobox button's width, see https://headlessui.com/react/combobox
@@ -13,6 +14,7 @@
   min-width: variables.$min-width-listbox-options-list;
   list-style-type: none;
   overflow-y: auto;
+  z-index: z-indices.$overlay;
 }
 
 .optionValue {
